--- a/AlisverisSitesi/Views/Home/Index.cshtml
+++ b/AlisverisSitesi/Views/Home/Index.cshtml
@@ -2,7 +2,23 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+
+<div class="IndexDiv">
+    <p> <h1 class="text-center font-weight-bolder">Alişveriş Sepeti</h1></p>
+
+    <div class="row m-2">
+        <div class="col-8">
+            <p><h5>Alis veriş septimize hos gelsiniz</h5></p>
+
+        </div>
+        <div class="col-4">
+
+            <img src="~/images/shoppingcart.png" class="img-fluid"/>
+
+        </div>
+    </div>
+
 </div>
+
+
