--- a/AlisverisSitesi/Views/Shared/_LoginPartial.cshtml
+++ b/AlisverisSitesi/Views/Shared/_LoginPartial.cshtml
@@ -1,12 +1,16 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<UserDetails> SignInManager
+@inject UserManager<UserDetails> UserManager
+@{
+    string menuTextColor = "text-white";
+
+}
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-        <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
+            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
@@ -17,10 +21,10 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Register</a>
+            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Register">Kayit Ol</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
+            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Login">Giris Yap</a>
     </li>
 }
 </ul>
