--- a/AlisverisSitesi/Views/Home/Index.cshtml
+++ b/AlisverisSitesi/Views/Home/Index.cshtml
@@ -5,18 +5,21 @@
 
 
 <div class="IndexDiv">
-    <p> <h1 class="text-center font-weight-bolder">Alişveriş Sepeti</h1></p>
+    <p> <h1 class="text-center font-weight-bolder">Alışveriş Sepeti</h1></p>
 
-    <div class="row m-2">
-        <div class="col-8">
-            <p><h5>Alis veriş septimize hos gelsiniz</h5></p>
+    <div class=" eee row m-2">
+       
+      
+      
+            
+                <img src="~/images/shoppingcart2.png" class="sss  img-fluid" />
 
-        </div>
-        <div class="col-4">
+        <img src="~/images/shoppingcart3.png" class="sss  img-fluid" />
 
-            <img src="~/images/shoppingcart.png" class="img-fluid"/>
+                <img src="~/images/shoppingcart.png" class="sss  img-fluid" />
 
-        </div>
+
+      
     </div>
 
 </div>
