--- a/AlisverisSitesi/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AlisverisSitesi/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-4 container CenteredContainer text-center ">
             <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <h5>yeni hesap oluştur</h5>
+                <h5>Hesap Oluştur</h5>
                 <hr />
                 <div asp-validation-summary="All" class="text-danger"></div>
                 <div class="form-group">
