--- a/AlisverisSitesi/Views/Shared/_Layout.cshtml
+++ b/AlisverisSitesi/Views/Shared/_Layout.cshtml
@@ -32,12 +32,16 @@
                         <li class="nav-item">
                                 <a class="nav-link  @menuTextColor" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                       
-                        @if (User.Identity.IsAuthenticated)
-                        {
-                            if (User.IsInRole("Admin"))
+                            <li class="nav-item">
+                                <a class="nav-link  @menuTextColor" asp-area="" asp-controller="Uruns" asp-action="Index">UrunEkle</a>
+                            </li>
+
+
+                            @if (User.Identity.IsAuthenticated)
                             {
-                                <li class="nav-item">
+                                if (User.IsInRole("Admin"))
+                                {
+                                    <li class="nav-item">
                                         <a class="nav-link @menuTextColor" asp-area="" asp-controller="ContactUs" asp-action="Index">Gelen Mesajlar</a>
                                     </li>
                                 }
@@ -48,7 +52,7 @@
                                     </li>
                                 }
                             }
-                    </ul>
+                        </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -57,7 +61,19 @@
     </div>
     <div class="container">
         <main role="main" class="pb-3">
+            <div class="row">
+                <div class="col-3">
+                    <vc:categories-view-copnent></vc:categories-view-copnent>
+
+                   <!--<div class="bg-success mt-3 p-3 text-white">
+                        <vc:small-cart><</vc:small-cart>
+                    </div>-->
+                </div>
+                <div class="col">
+                    <partial name="_NotificationPartial" />
             @RenderBody()
+               </div>
+            </div>
         </main>
     </div>
 
