--- a/AlisverisSitesi/Views/_ViewImports.cshtml
+++ b/AlisverisSitesi/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using AlisverisSitesi
 @using AlisverisSitesi.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AlisverisSitesi
