--- a/AlisverisSitesi/Views/Shared/Components/CategoriesViewCopnent/Default.cshtml
+++ b/AlisverisSitesi/Views/Shared/Components/CategoriesViewCopnent/Default.cshtml
@@ -2,7 +2,7 @@
 
 <ul class="list-group">
     <li class="list-group-item">
-        <a class="nav-link text-dark" asp-controller="Uruns" asp-action="Index" asp-route-categorySlug="">All Products</a>
+        <a class="nav-link text-dark" asp-controller="Uruns" asp-action="Index" asp-route-categorySlug="">Category</a>
     </li>
 
     @foreach (var item in Model)
