--- a/AlisverisSitesi/Views/Uruns/Index.cshtml
+++ b/AlisverisSitesi/Views/Uruns/Index.cshtml
@@ -10,7 +10,7 @@
     @foreach (var item in Model)
     {
         <div class="col-4">
-            @*<img src="/media/products/@item.Image" class="img-fluid" alt="" />*@
+            <img src="/media/Urunlar/@item.Image" class="img-fluid" alt="" />
             <div>
                 <h4>@item.Name</h4>
                 @Html.Raw(item.Description)
@@ -30,7 +30,7 @@
     {
         <div class="d-flex w-100 justify-content-center">
             <pagination page-count="@ViewBag.TotalPages"
-                    page-target="/Urunlar/@ViewBag.CategorySlug"
+                    page-target="/Uruns/@ViewBag.CategorySlug"
                     page-number="@ViewBag.PageNumber"
                     page-range="@ViewBag.PageRange">
             </pagination>
