--- a/AlisverisSitesi/Views/_ViewImports.cshtml
+++ b/AlisverisSitesi/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AlisverisSitesi
 @using AlisverisSitesi.Models
+@using AlisverisSitesi.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, AlisverisSitesi
