add Admin paneli

--- a/AlisverisSitesi/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AlisverisSitesi/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AlisverisSitesi</title>
+    <title>@ViewData["Title"] - Admin Area</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AlisverisSitesi.styles.css" asp-append-version="true" />
@@ -22,34 +22,13 @@
         <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                    <a class="navbar-brand  @menuTextColor" asp-area="" asp-controller="Home" asp-action="Index">AlisverisSitesi</a>
+                    <a class="navbar-brand  @menuTextColor" asp-area="" asp-controller="Home" asp-action="Index" target="_blank">AlisverisSitesi</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                                <a class="nav-link  @menuTextColor" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                            <li class="nav-item">
-                                <a class="nav-link  @menuTextColor" asp-area="" asp-controller="Uruns" asp-action="Index">UrunEkle</a>
-                            </li>
-
-
-                            @if (User.Identity.IsAuthenticated)
-                            {
-                                if (User.IsInRole("Admin"))
-                                {
-                                   
-                                }
-                                else
-                                {
-                                    <li class="nav-item">
-                                        <a class="nav-link  @menuTextColor" asp-area="" asp-controller="ContactUs" asp-action="Create">İletişim</a>
-                                    </li>
-                                }
-                            }
                         </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -60,13 +39,7 @@
     <div class="container">
     <main role="main" class="pb-3">
         <div class="row">
-            <div class="col-3">
-                    <vc:categories-view-copnent/>
-
-                <div class="bg-success mt-3 p-3 text-white">
-                        <vc:small-cart/>
-                </div>
-            </div>
+       
             <div class="col">
                 <partial name="_NotificationPartial" />
                 @RenderBody()
@@ -75,11 +48,7 @@
     </main>
     </div>
 
-    <footer class="border-top footer text-muted" style="background: linear-gradient(to right,#283408,#197696);">
-        <div class="container  @menuTextColor">
-            &copy; 2022 - AlisverisSitesi - <a asp-area="" asp-controller="Home" asp-action="Privacy" class="@menuTextColor">Privacy</a>
-        </div>
-    </footer>
+   
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
