--- a/AlisverisSitesi/Views/Shared/_Layout.cshtml
+++ b/AlisverisSitesi/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link @menuTextColor" asp-area="" asp-controller="ContactUs" asp-action="Index">Gelen Mesajlar</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link  @menuTextColor" asp-area="Admin" asp-controller="Uruns" asp-action="Index">Admin İşlemleri</a>
+                                    </li>
                                 }
                                 else
                                 {
