--- a/AlisverisSitesi/Areas/Admin/Views/Uruns/Edit.cshtml
+++ b/AlisverisSitesi/Areas/Admin/Views/Uruns/Edit.cshtml
@@ -1,4 +1,10 @@
-﻿@model AlisverisSitesi.Models.Urun
+﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Options
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@inject IOptions<RequestLocalizationOptions> LocOptions
+@model AlisverisSitesi.Models.Urun
 
 @{
     ViewData["Title"] = "Edit";
@@ -53,14 +59,14 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-primary">Edit</button>
+                <button class="btn btn-primary">@Localizer["Oluştur"]</button>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index"> @Localizer["Listeye dön"]</a>
 </div>
 
 @section Scripts {
