--- a/AlisverisSitesi/Views/ContactUs/Create.cshtml
+++ b/AlisverisSitesi/Views/ContactUs/Create.cshtml
@@ -4,37 +4,43 @@
     ViewData["Title"] = "Create";
 }
 
+@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Options
+@using Microsoft.AspNetCore.Mvc.Localization
 
+@inject IViewLocalizer Localizer
+@inject IOptions<RequestLocalizationOptions> LocOptions
 
 <div class="container IndexDiv">
 <div class="row">
         <div class="col-4 container CenteredContainer text-center ">
         <form asp-action="Create">
-                <h4>iletişim Sayfası </h4>
+                <h4>@Localizer["iletişim Sayfası"] </h4>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
 
-                    <input asp-for="Name" class="form-control" placeholder="Ad Soyad" />
+                    <input asp-for="Name" class="form-control" placeholder="@Localizer["Ad Soyad"]" />
                
             </div>
            
             <div class="form-group">
 
-                    <input asp-for="Email" class="form-control" placeholder="Email " />
+                    <input asp-for="Email" class="form-control" placeholder="@Localizer["Mail"]" />
                
             </div>
             <div class="form-group">
 
-                    <input asp-for="Subject" class="form-control" placeholder="Konu " />
+                    <input asp-for="Subject" class="form-control" placeholder="@Localizer["Konu"]" />
               
             </div>
                 <div class="form-group">
 
-                    <input asp-for="Message" class="form-control" placeholder="Message " />
+                    <input asp-for="Message" class="form-control" placeholder="@Localizer["mesaj"]" />
 
                 </div>
-                <input  type="submit" class="btn btn-danger" value="MSj At"></input>
+                <input type="submit" class="btn btn-danger" value="@Localizer["mesaj gönder"]"></input>
            
         </form>
     </div>
