--- a/AlisverisSitesi/Views/Shared/_LoginPartial.cshtml
+++ b/AlisverisSitesi/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,11 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Builder
+@using Microsoft.AspNetCore.Localization
+@using Microsoft.Extensions.Options
+@using Microsoft.AspNetCore.Mvc.Localization
+
+@inject IViewLocalizer Localizer
+@inject IOptions<RequestLocalizationOptions> LocOptions
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<UserDetails> SignInManager
 @inject UserManager<UserDetails> UserManager
 @{
@@ -14,17 +21,17 @@
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
-                <button type="submit" class="nav-link btn btn-link text-white">Logout</button>
+                <button type="submit" class="nav-link btn btn-link text-white">@Localizer["Çıkış"]</button>
         </form>
     </li>
 }
 else
 {
     <li class="nav-item">
-            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Register">Kayit Ol</a>
+            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Register">@Localizer["Kayit Ol"]</a>
     </li>
     <li class="nav-item">
-            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Login">Giris Yap</a>
+            <a class="nav-link @menuTextColor" asp-area="Identity" asp-page="/Account/Login">@Localizer["Giris Yap"]</a>
     </li>
 }
 </ul>
